<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ParseLoginStarter</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_login">Log In</string>
    <string name="action_logout">Log Out</string>
    <string name="action_link_twitter">Link to Twitter</string>
	<string name="action_link_facebook">Link to Facebook</string>
	<string name="spinner_logging_in">Logging in&#8230;</string>
	<string name="spinner_linking">Linking&#8230;</string>
	<string name="spinner_checking_availability">Checking Availability&#8230;</string>
	<string name="link_success">Success! Account is now linked.</string>
	<string name="link_failure">Error! Account did not link.</string>
	<string name="login_text_twitter">Sign in with Twitter</string>
	<string name="login_text_fb">Sign in with Facebook</string>
	<string name="login_text_anon">Sign in Anonymously</string>
	<string name="login_text_select_username">Select a username:</string>
	<string name="login_text_finish">Finish</string>
	<string name="login_text_username_invalid">Usernames can only contain 0-9,A-Z. Usernames are not case sensitive.</string>
	<string name="login_text_username_unavailable">That username isn\'t available. Try another.</string>
	<string name="dialog_title_confirm">Are you sure?</string>
	<string name="dialog_anonymous_warning">You must link your account before logging out. If you do not, all your information will be lost. Do you wish to continue?\</string>
	<string name="username">Username</string>
	<string name="check_availability">Check Availability</string>
	<!-- Place your keys below	 -->
	<string name="PARSE_APPLICATION_ID">YOUR_PARSE_APP_ID_HERE</string>
	<string name="PARSE_CLIENT_KEY">YOUR_PARSE_CLIENT_ID_HERE</string>
	<string name="FACEBOOK_APP_ID">YOUR_FACEBOOK_APP_ID_HERE</string>
	<string name="TWITTER_API_KEY">YOUR_TWITTER_API_KEY_HERE</string>
	<string name="TWITTER_API_SECRET">YOUR_TWITTER_API_SECRET_HERE</string>
</resources>
