<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UsernameActivity" >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linearlayout_bg"
        android:padding="10dp"
        >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_select_username"
            android:textColor="@android:color/white" />"
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button 
		       	android:id="@+id/button_check_availability"
		       	android:background="@drawable/ic_check"
		       	android:layout_alignParentRight="true"
		       	android:layout_width="wrap_content"
		       	android:layout_height="wrap_content"
		        android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:paddingRight="10dp"
		        android:paddingLeft="30dp"
		       	android:layout_margin="4dp"/>
			<!-- Icon from: http://www.icons4android.com/icon/1186 -->
	        <EditText
	            android:id="@+id/edit_login_username"
	            android:hint="@string/username"
	            android:layout_toLeftOf="@id/button_check_availability"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="10dp"
		        android:paddingBottom="10dp"
		        android:paddingRight="10dp"
		        android:paddingLeft="30dp"
		       	android:layout_margin="4dp"
		       	android:textColor="@android:color/white"/>
        </RelativeLayout>
        
        <View
		    android:layout_width="match_parent"
		    android:layout_height="2dp"
		    android:background="?android:attr/listDivider"/>
        
    	<Button 
	       	android:id="@+id/button_finish_login"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:paddingRight="10dp"
	        android:paddingLeft="30dp"
	       	android:layout_margin="4dp"
	        android:background="@drawable/layers_anon_button_bg"
	       	android:text="@string/login_text_finish"
	       	android:enabled="false"
	        style="@style/ButtonText"/>
    	<TextView
    	    android:id="@+id/textview_username_unavailable"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_username_unavailable"
            android:textColor="@android:color/white"/>
        </LinearLayout>
</RelativeLayout>