<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linearlayout_bg"
        android:padding="10dp">
        
        <View
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:background="?android:attr/listDivider"/>
        
    	<Button 
	       	android:id="@+id/button_login_anon"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:paddingRight="10dp"
	        android:paddingLeft="30dp"
	       	android:layout_margin="4dp"
	        android:background="@drawable/layers_anon_button_bg"
	       	android:text="@string/login_text_anon"
	        style="@style/ButtonText"
	        android:enabled="true"/>
        <Button 
	       	android:id="@+id/button_login_fb"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:paddingRight="10dp"
	       	android:paddingLeft="30dp"
	        android:layout_margin="4dp"
	        android:background="@drawable/layers_fb_button_bg"
	       	android:text="@string/login_text_fb"
            style="@style/ButtonText"
            android:enabled="true"/>
        <Button 
	       	android:id="@+id/button_login_twitter"
	       	android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:paddingRight="10dp"
	       	android:paddingLeft="30dp"
	        android:layout_margin="4dp"
	       	android:background="@drawable/layers_twitter_button_bg"
	       	android:text="@string/login_text_twitter"
	       	style="@style/ButtonText"
	       	android:enabled="true"/>
        </LinearLayout>

</RelativeLayout>